Fixed color on hamburger menu for light/dark mode

--- a/css/index.css
+++ b/css/index.css
@@ -945,6 +945,10 @@ section {
         fill: var(--light-content-light-mode);
     }
 
+    .svg-icon--hamburger {
+        fill: var(--black-content-light-mode);
+    }
+
     .grid--introduction {
         box-shadow: var(--box-shadow-tiny-light-mode);
     }
@@ -1086,6 +1090,10 @@ section {
 
     .svg-icon--menu path{
         fill: var(--light-content-dark-mode);
+    }
+
+    .svg-icon--hamburger {
+        fill: var(--black-content-dark-mode);
     }
 
     .image__color--invert img {
